<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="full_bull_amount_label">Enter bill amount</string>
    <string name="ten_percent_label">10%</string>
    <string name="fifteen_percent_label">15%</string>
    <string name="twenty_percent_label">20%</string>
    <string name="tip_caption_label">Your tip is:</string>
    <string name="default_tip_amount_label">$0.00</string>
    <string name="dollar_sign_label">$</string>

</resources>
