<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvTipCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/tip_caption_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn10percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="78dp"
        android:onClick="calculate10PercentTip"
        android:text="@string/ten_percent_label" />

    <Button
        android:id="@+id/btn15percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10percent"
        android:layout_alignBottom="@+id/btn10percent"
        android:layout_centerHorizontal="true"
        android:onClick="calculate15PercentTip"
        android:text="@string/fifteen_percent_label" />

    <Button
        android:id="@+id/btn20percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15percent"
        android:layout_alignBottom="@+id/btn15percent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:onClick="calculate20PercentTip"
        android:text="@string/twenty_percent_label" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTipCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/default_tip_amount_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/full_bull_amount_label"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etBillAmount"
        android:layout_alignTop="@+id/etBillAmount"
        android:layout_toLeftOf="@+id/etBillAmount"
        android:text="@string/dollar_sign_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
